--- a/SpointLiteVersion/Views/productos1/Index.cshtml
+++ b/SpointLiteVersion/Views/productos1/Index.cshtml
@@ -33,6 +33,7 @@
                                 <th>
                                     @Html.DisplayName("DESCRIPCIÓN")
                                 </th>
+                            
                                 <th>
                                     @Html.DisplayName("COSTO")
                                 </th>
@@ -47,19 +48,20 @@
                         </thead>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CodProducto)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Descripcion)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.costo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Precio)
-                                </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CodProducto)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Descripcion)
+                            </td>
+                          
+                            <td class="costo1">
+                                @Html.DisplayFor(modelItem => item.costo)
+                            </td>
+                            <td class="precio1">
+                                @Html.DisplayFor(modelItem => item.Precio)
+                            </td>
 
 
 
@@ -67,12 +69,15 @@
 
 
 
-                                <td>
-                                    <a hidden href="@Url.Action("Create","productos1",new { id=item.idProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a> |
+                            <td>
 
 
-                                </td>
-                            </tr>
+                                <a hidden href="@Url.Action("Create","productos1",new { id=item.idProducto})" class="edit"><i class="fas fa-edit eliminar"></i></a>
+                                <a href="@Url.Action("Index","productos1")" class="facturar" title="Facturar"><i class="fas fa-donate eliminar"></i></a> |
+                                <a href="@Url.Action("Index","productos1")" class="facturar" title="Facturar"><i class="fas fa-hand-point-up eliminar"></i></a>
+
+                            </td>
+                        </tr>
                         }
 
                     </table>
@@ -131,15 +136,19 @@
 </script>
 
 <script>
+ 
 
-    //$(function () {
+    $(document).ready(function () {
+        $("td.costo1").each(function () { $(this).html(parseFloat($(this).text()).toLocaleString('en-US', { style: 'currency', currency: 'USD' })); });
+        $("td.precio1").each(function () { $(this).html(parseFloat($(this).text()).toLocaleString('en-US', { style: 'currency', currency: 'USD' })); });
+    });
 
-    //    //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
+        //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
 
 
-    //    //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
-    //    //$("#tabla td").numeric(",");
-    //});
+        //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
+        //$("#tabla td").numeric(",");
+   
     //$("#itbis").numeric(",");
 
 
