confirmar todo final

--- a/SpointLiteVersion/Views/Shared/_Layout.cshtml
+++ b/SpointLiteVersion/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Css")
     <link href="~/Content/all.css" rel="stylesheet" />
-    <link href="~/Content/Style.css" rel="stylesheet" media="all"/>
-    <link href="~/Content/estilosimprimir.css" rel="stylesheet"  media="print"/>
+    <link href="~/Content/Style.css" rel="stylesheet" media="all" />
+    <link href="~/Content/estilosimprimir.css" rel="stylesheet" media="print" />
 
     <link rel="stylesheet" href="~/Content/bower_components/font-awesome/css/font-awesome.min.css">
 
@@ -131,7 +131,7 @@
                     </li>
 
                     <li>
-                        <a class="collapse-item emp" href="@Url.Action("Index","Empleado")">
+                        <a class="collapse-item emp" href="@Url.Action("Index","compras")">
                             <i class="fas fa-cart-plus"></i>
                             <span>Compras</span>
                         </a>
@@ -190,7 +190,6 @@
     <script src="~/Scripts/printThis.js"></script>
     <script src="~/Scripts/jquery.numeric.js"></script>
     <script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
-
 
 </body>
 
