--- a/SpointLiteVersion/Views/vendedores/Index.cshtml
+++ b/SpointLiteVersion/Views/vendedores/Index.cshtml
@@ -9,10 +9,10 @@
         <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
             <h2 style="margin-left:30px; margin-bottom:35px;">Vendedores</h2>
             <p>
-                <Button onclick="location.href='@Url.Action("Create","vendedores")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
+                <Button onclick="location.href='@Url.Action("Create","vendedores")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i></Button>
 
             </p>
-           
+
             <div class="row">
                 <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
                     <table class="table  table-hover t tabla" id="tabla">
@@ -20,22 +20,22 @@
 
                             <tr>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.nombre)
+                                  @Html.DisplayName("NOMBRE")                                                  
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.telefono)
+                                    @Html.DisplayName("TELÉFONO")
                                 </th>
 
 
                                 <th>
-                                    @Html.DisplayNameFor(model => model.cedula)
+                                    @Html.DisplayName("CÉDULA")
                                 </th>
 
 
 
 
 
-                                <th>@Html.DisplayName("Acciones")</th>
+                                <th>@Html.DisplayName("ACCIONES")</th>
                             </tr>
                         </thead>
                         @foreach (var item in Model)
@@ -62,9 +62,10 @@
 
 
                                 <td>
-                                    <a href="@Url.Action("Edit","vendedores",new { id=item.idvendedor})"><i class="fas fa-edit eliminar"></i></a> |
-                                    <a href="@Url.Action("Details","vendedores",new { id=item.idvendedor})"><i class="fas fa-info-circle eliminar "></i></a> |
-                                    <a href="@Url.Action("Delete","vendedores",new { id=item.idvendedor})"><i class="fas fa-trash-alt eliminar eli"></i></a>
+
+                                    <a hidden href="@Url.Action("Create","vendedores",new { id=item.idvendedor})" class="edit"><i class="fas fa-edit eliminar"></i></a>
+                                    <a href="@Url.Action("Index","vendedores")" class="facturar" title="Facturar"><i class="fas fa-donate eliminar"></i></a> |
+                                    <a href="@Url.Action("Index","vendedores")" class="facturar" title="Facturar"><i class="fas fa-hand-point-up eliminar"></i></a>
 
 
                                 </td>
@@ -82,8 +83,40 @@
 <script>
     $(document).ready(function () {
         $('#tabla').DataTable({
-            "pagingType": "full_numbers" // "simple" option for 'Previous' and 'Next' buttons only
+            "pagingType": "full_numbers", // "simple" option for 'Previous' and 'Next' buttons only
+            "language": {
+                "decimal": "",
+                "emptyTable": "NO HAY INFORMACION",
+                "info": "MOSTRANDO _START_ A _END_ de _TOTAL_ ENTRADAS",
+                "infoEmpty": "MOSTRANDO 0 to 0 of 0 ENTRADAS",
+                "infoFiltered": "(FILTRADO DE _MAX_ TOTAL ENTRADAS)",
+                "infoPostFix": "",
+                "thousands": ",",
+                "lengthMenu": "MOSTRAR _MENU_ ENTRADAS",
+                "loadingRecords": "CARGANDO...",
+                "processing": "PROCESANDO...",
+                "search": "BUSCAR:",
+                "zeroRecords": "SIN RESULTADOS ENCONTRADOS",
+                "paginate": {
+                    "first": "PRIMERO",
+                    "last": "ULTIMO",
+                    "next": "SIGUIENTE",
+                    "previous": "ANTERIOR"
+                }
+            }
         });
         $('.dataTables_length').addClass('bs-select');
+    });
+</script>
+<script>
+    $(document).ready(function () {
+
+        $('#tabla tr').click(function () {
+            var href = $(this).find("a").attr("href");
+            if (href) {
+                window.location = href;
+            }
+        });
+
     });
 </script>
