--- a/SpointLiteVersion/Views/clientes1/Index.cshtml
+++ b/SpointLiteVersion/Views/clientes1/Index.cshtml
@@ -15,10 +15,10 @@
         <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
             <h2 style="margin-left:30px; margin-bottom:35px;">Clientes</h2>
             <p>
-                <Button onclick="location.href='@Url.Action("Create","clientes1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i><span class="nuevo">Nuevo</span></Button>
+                <Button onclick="location.href='@Url.Action("Create","clientes1")'" class="btn btn-success crear"><i class="fas fa-plus iconocrear"></i></Button>
 
             </p>
-        
+
             <div class="row">
                 <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
                     <table class="table  table-hover t tabla" id="tabla">
@@ -49,37 +49,37 @@
                         </thead>
                         @foreach (var item in Model)
                         {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.nombre)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.telefono)
-                            </td>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.nombre)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.telefono)
+                                </td>
 
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.cedula)
-                            </td>
-
-
-
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.cedula)
+                                </td>
 
 
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ciudad.Nombre)
-                            </td>
-                          
 
-                            <td>
-                                <a href="@Url.Action("Edit","clientes1",new { id=item.idCliente})"><i class="fas fa-edit eliminar"></i></a> |
-                                <a href="@Url.Action("Details","clientes1",new { id=item.idCliente})"><i class="fas fa-info-circle eliminar "></i></a> |
-                                <a href="@Url.Action("Delete","clientes1",new { id=item.idCliente})"><i class="fas fa-trash-alt eliminar eli"></i></a>
 
-                             
-                            </td>
-                        </tr>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ciudad.Nombre)
+                                </td>
+
+
+                                <td>
+                                    <a hidden href="@Url.Action("Create","clientes1",new { id=item.idCliente})" class="edit"><i class="fas fa-edit eliminar"></i></a>
+                                    <a href="@Url.Action("Index","clientes1")" class="facturar" title="Facturar"><i class="fas fa-donate eliminar"></i></a> |
+                                    <a href="@Url.Action("Index","clientes1")" class="facturar" title="Facturar"><i class="fas fa-hand-point-up eliminar"></i></a>
+
+
+                                </td>
+                            </tr>
                         }
 
                     </table>
@@ -115,5 +115,17 @@
             }
         });
         $('.dataTables_length').addClass('bs-select');
+    });
+</script>
+<script>
+    $(document).ready(function () {
+
+        $('#tabla tr').click(function () {
+            var href = $(this).find("a").attr("href");
+            if (href) {
+                window.location = href;
+            }
+        });
+
     });
 </script>
