--- a/SpointLiteVersion/Views/productos1/Create.cshtml
+++ b/SpointLiteVersion/Views/productos1/Create.cshtml
@@ -27,7 +27,7 @@
                                     </label>
                                 </div>
                                 <span>Seleccionar</span>
-                                <input type="hidden" name="Foto" id="Foto" value="" />
+                                <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
 
                             </center>
                         }
@@ -98,7 +98,7 @@
                             <div class="col-md-9">
                                 @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
 
-                                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: Producto...." } })
                                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group col-md-2 form1">
@@ -118,7 +118,7 @@
 
                             <div class="form-group col-md-2">
                                 @Html.Label("Código de barras", new { @class = "control-label", @style = "margin-left:1px !important;" })
-                                @Html.EditorFor(model => model.codigobarra, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.codigobarra, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingresa Código" } })
                                 @Html.ValidationMessageFor(model => model.codigobarra, "", new { @class = "text-danger" })
 
                             </div>
@@ -128,14 +128,14 @@
 
                                 @Html.LabelFor(model => model.costo, htmlAttributes: new { @class = "control-label col-md-1" })
 
-                                @Html.EditorFor(model => model.costo, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.costo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: $99.99" } })
                                 @Html.ValidationMessageFor(model => model.costo, "", new { @class = "text-danger" })
 
 
                             </div>
                             <div class="form-group col-md-2" style="margin-right:2%; width:20%;">
                                 @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
-                                @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control",@placeholder="Ej: $99.99" } })
                                 @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
 
                             </div>
@@ -189,7 +189,7 @@
 
 
 
-                                @Html.EditorFor(model => model.nota, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.nota, new { htmlAttributes = new { @class = "form-control",@placeholder = "Ej: este producto tiene....." } })
                                 @Html.ValidationMessageFor(model => model.nota, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -262,9 +262,7 @@
 <script src="~/Scripts/jquery.numeric.js"></script>
 <script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
 <script src="~/Scripts/autoNumeric/autoNumeric.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/jquery-1.12.4.js"></script>
-<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 <script>
     $(document).ready(function () {
 
@@ -451,6 +449,7 @@
                     document.getElementById("nota").value = "";
                     document.getElementById("idProducto").value = "";
                     document.getElementById("idProducto").name = "";
+                    document.getElementById("Foto").name = "";
 
                     $.each(data, function (create, row) {
 
@@ -464,6 +463,11 @@
                         document.getElementById("nota").value = row.nota;
                         document.getElementById("idProducto").value = row.idProducto;
                         document.getElementById("idProducto").name = "idProducto";
+                        document.getElementById("Foto").name = "Foto";
+                        document.getElementById("fotoejemplo").src = row.Foto;
+
+                        document.getElementById("Foto").value = row.Foto;
+
                     });
                 });
             })
