--- a/SpointLiteVersion/Views/suplidores/Create.cshtml
+++ b/SpointLiteVersion/Views/suplidores/Create.cshtml
@@ -9,75 +9,116 @@
 
     <div class="row">
         <div class="col-md-7 modal-content contedor" style="width:88%; margin-left:4%; margin-top:2%;">
-            <center><i class="fas fa-user iconousuario"></i></center>
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
+            <div class="form-horizontal">
 
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @if (ViewBag.foto != null)
+                {
+                    <center>
+                        <div>
+                            <input type="file" accept="image/*" id="fotosubir" />
+                            <label for="fotosubir">
+                                <img src="@ViewBag.foto" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                            </label>
+                        </div>
+                        <span>Seleccionar</span>
+                        <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
+
+                    </center>
+                }
+                else
+                {
+                    <center>
+                        <div>
+                            <input type="file" accept="image/*" id="fotosubir" />
+                            <label for="fotosubir">
+                                <img src="~/Content/user.png" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                            </label>
+                        </div>
+                        <span >Seleccionar</span>
+                        <input type="hidden" name="Foto" id="Foto" value="" />
+
+                    </center>
+                }
+                @if (@ViewBag.id != null)
+                {
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            @Html.LabelFor(model => model.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre", @placeholder = "Ej: Juan" } })
-                            @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.idSuplidor)
+                }
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre", @placeholder = "Ej: Juan" } })
+                        @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
 
-                        </div>
-
-                        <div class="form-group col-md-5">
-
-                            @Html.LabelFor(model => model.direccion, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                            @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: calle #1" } })
-                            @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-3">
-                            @Html.LabelFor(model => model.telefono, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
-                            @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
-
-                        </div>
-
-                        <div class="form-group col-md-3" style="width:24%;">
-
-                            @Html.LabelFor(model => model.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                            @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
-                            @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
-                        </div>
                     </div>
 
+                    <div class="form-group col-md-5">
 
+                        @Html.Label("Dirección", htmlAttributes: new { @class = "control-label col-md-2" })
 
-
-
-                    <div class="form-group">
-                        <div class="col-md-7" style="width:53%;">
-                            @Html.LabelFor(model => model.correo, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                            @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingresa un Correo" } })
-                            @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="btn btn-default" />
-                        </div>
+                        @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: calle #1" } })
+                        @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        @Html.Label("Teléfono", htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
+                        @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
+
+                    </div>
+
+                    <div class="form-group col-md-3" style="width:24%;">
+
+                        @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                        @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
+                        @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="form-group">
+                    <div class="col-md-7" style="width:53%;">
+                        @Html.Label("Correo", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                        @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingresa un Correo" } })
+                        @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+                <div class="form-row">
+
+                    <div class="form-group col-md-10">
+
+                        @if (ViewBag.id != null)
+                        {
+
+                            <a class="btn btn-danger btnelimina" href="@Url.Action("Delete","suplidores",new { id=Model.idSuplidor})">Eliminar</a>
+                        }
+
+                    </div>
+                    <div class="form-group col-md-1">
+                        <button type="submit" class="btn btn-info" id="crear"><i class="fas fa-arrow-circle-left"></i></button>
+
+                    </div>
+                </div>
+            </div>
             }
         </div>
     </div>
 </div>
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="~/Scripts/inputmask/inputmask.js"></script>
 <script src="~/Scripts/inputmask/inputmask.extensions.js"></script>
@@ -89,4 +130,12 @@
     $("#telefono").inputmask({ "mask": "(999) 999-9999" });
     $("#cedula").inputmask({ "mask": "999-9999999-9" });
 
+</script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#nombre").focus();
+
+
+
+    });
 </script>
