--- a/SpointLiteVersion/Views/facturas/VistaPdf.cshtml
+++ b/SpointLiteVersion/Views/facturas/VistaPdf.cshtml
@@ -11,8 +11,8 @@
     <title>VistaPdf</title>
 </head>
 <body>
-    <div> 
-        <h2>ViewBag.producto</h2>
-    </div>
-</body>
+    <p>@ViewBag.cantidad</p>
+    <p>@ViewBag.precio</p>
+
+    </body>
 </html>
