--- a/SpointLiteVersion/Views/facturas/Index.cshtml
+++ b/SpointLiteVersion/Views/facturas/Index.cshtml
@@ -34,13 +34,13 @@
                                     @Html.DisplayNameFor(model => model.idfactura)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.descripcion)
+                                    @Html.DisplayNameFor(model => model.producto)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.cliente)
+                                    @Html.DisplayNameFor(model => model.fecha)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.vendedor)
+                                    @Html.DisplayNameFor(model => model.Total)
                                 </th>
 
 
@@ -55,13 +55,13 @@
                                     @Html.DisplayFor(modelItem => item.idfactura)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.descripcion)
+                                    @Html.DisplayFor(modelItem => item.producto)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.cliente)
+                                    @Html.DisplayFor(modelItem => item.fecha)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.vendedor)
+                                    @Html.DisplayFor(modelItem => item.Total)
                                 </td>
 
 
