--- a/SpointLiteVersion/Views/Shared/_Layout.cshtml
+++ b/SpointLiteVersion/Views/Shared/_Layout.cshtml
@@ -190,6 +190,8 @@
     <script src="~/Scripts/printThis.js"></script>
     <script src="~/Scripts/jquery.numeric.js"></script>
     <script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
+    <script src="~/Scripts/alertify/alertify.min.js"></script>
+
 
 </body>
 
